--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stakmods Educational Platform</title>
+    <title>Theos Educational Platform</title>
     <link rel="stylesheet" href="css/main.css" />
     <style>
         body {
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="loading-container">
-        <div class="logo">Stakmods</div>
+        <div class="logo">Theos</div>
         <div class="loading-text">Educational Platform</div>
         <div class="spinner"></div>
         <div class="redirect-info">Redirecting to login...</div>
