--- a/pages/assessment_center.html
+++ b/pages/assessment_center.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assessment Center - Stakmods Educational Platform</title>
+    <title>Assessment Center - Theos Educational Platform</title>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +23,7 @@
                         </svg>
                     </div>
                     <div class="ml-3">
-                        <h1 class="text-xl font-heading font-bold text-primary">Stakmods Educational Platform</h1>
+                        <h1 class="text-xl font-heading font-bold text-primary">Theos Educational Platform</h1>
                         <p class="text-sm text-secondary-600">Theological Excellence</p>
                     </div>
                 </div>
